fix: Starting to fix Posts view on mobile (grid layout)

--- a/modules/ept-frontend/client/scss/ept/global/_positioning.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_positioning.scss
@@ -61,9 +61,9 @@ $grid-2-column: 1fr $sidebarWidth;
     grid-template-rows: auto;
     row-gap: 1rem;
 
-    .thread-title {
-      text-align: center;
-    }
+    // .thread-title {
+    //   text-align: center;
+    // }
 
     .user-controls {
       .user-controls-base {
